generated: http client with swagger.yaml ✔
