# intermediate-go-microservices/gorilla_restfull_microservice/handlers/fetchProductHandler.go
@@ -28,7 +28,7 @@ func (p *Products) GetProducts(rw http.ResponseWriter, r *http.Request) {
 	}
 }
 
-// swagger:route GET /products/{id} products listSingle
+// swagger:route GET /products/{id} products listSingleProduct
 // Returns a single product from DB
 // responses:
 //		200: productResponse
