# intermediate-go-microservices/gorilla_restfull_microservice/swagger.yaml
@@ -107,7 +107,7 @@ paths:
                     $ref: '#/definitions/Product'
             responses:
                 "201":
-                    $ref: '#/responses/noContentReponse'
+                    $ref: '#/responses/noContentResponse'
                 "404":
                     $ref: '#/responses/errorResponse'
                 "422":
@@ -137,7 +137,15 @@ paths:
                 - products
         get:
             description: Returns a single product from DB
-            operationId: listSingle
+            operationId: listSingleProduct
+            parameters:
+                - description: The id of the product to be deleted from db
+                  format: int64
+                  in: path
+                  name: id
+                  required: true
+                  type: integer
+                  x-go-name: ID
             responses:
                 "200":
                     $ref: '#/responses/productResponse'
